# claude-web-terminal

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.claude/skills/claude-web/: skill.md
docs/: claude-skill.md
events/: socketio_handlers.py
server/: app.py
ssh/: session.py
ui/components/: terminal.py  workspace_selector.py
